[project]
name = "osv-supply-chain-insights"
version = "0.1.0"
description = "Data-driven analysis of open-source supply-chain vulnerability trends using OSV data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "polars>=1.36.1",
]

[dependency-groups]
dev = []
